--- a/_posts/2018-10-15-Anatomy.md
+++ b/_posts/2018-10-15-Anatomy.md
@@ -6,16 +6,17 @@ author: Alexander Sotra
 categories:
 - events
 excerpt: 
-    This year we are having the first ever Anatomy Trivia Night! Its on October 17th from 7-9pm. Register online in groups of 4 or as an individual using this google doc: https://goo.gl/forms/DXBiqqQ1cdpcSWRp2. 
+    This year we are having the first ever Anatomy Trivia Night! Its on October 17th from 7-9pm. Register online in groups of 4 or as an individual. 
     
 images: images/posts/anatomy_trivia_2018.jpg
 thumb: oct_17.png
 ---
-Pay with cash at the door $3 individual or $10 for a team of 4. An extra $1 fee applies for card payment.Also FREE SNACKS AND PRIZES FOR TOP TEAMS!! The questions will also be posted afterwards, for those who are unavailable to attend the event and still would like to learn.
+Pay with cash at the door $3 individual or $10 for a team of 4. An extra $1 fee applies for card payment.Also FREE SNACKS AND PRIZES FOR TOP TEAMS!! The questions will also be posted afterwards, for those who are unavailable to attend the event and still would like to learn. Sign up on our google doc.
 
 Payment goes towards:
 - Prizes for the winners
 - Snacks for all contestants
 - Room booking fees
 - clean up fees
-[Facebook event here](https://www.facebook.com/events/529570960849353/). 
+[Facebook event](https://www.facebook.com/events/529570960849353/). 
+[Google Doc](https://goo.gl/forms/DXBiqqQ1cdpcSWRp2).
