--- a/_posts/2019-1-12-IN.md
+++ b/_posts/2019-1-12-IN.md
@@ -1,14 +1,14 @@
 ---
 layout: post
 title:  "Health & Tech Industry Night"
-date:   2019-1-10 13:03:21 -0400
+date:   2019-1-20 13:03:21 -0400
 author: Alexander Sotra
 categories:
 - events
 excerpt: 
-    The Industry Night will be held Wednesday Jan. 16 in CIBC hall from 5:15 pm to 8:15 pm. It provides you with the unique opportunity to network with HR reps and engineers, investigate career options in the health industry, and possibly meet your FUTURE CO-OP/FULL-TIME EMPLOYER! Register on OSCARplus --> Events --> Engineering
-images: images/posts/IN_2018.jpg
-thumb: jan_16.png
+    The Industry Night will be held Tuesday Feb. 26 in CIBC hall from 5:15 pm to 8:15 pm. It provides you with the unique opportunity to network with HR reps and engineers, investigate career options in the health industry, and possibly meet your FUTURE CO-OP/FULL-TIME EMPLOYER! Register on OSCARplus --> Events --> Engineering
+images: images/posts/IN2_2019.jpg
+thumb: feb_26.png
 ---
 
 Engineering Co-op & Career Services (ECCS), the iBioMed Society and the Bioengineering at McMaster Society (BEAMS) present ENGINEERING HEALTH & TECH INDUSTRY NIGHT!
